# lab3

./: CMakeLists.txt
task1/: application.cpp  application.h  position.cpp  position.h
